deploy/pod-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: busybox
        command: ['sh', '-c', 'echo "Hello, World!" && sleep 3600']
        ports:
        - containerPort: 80
