deploy/pod-labeler-admissionWebhookConfig.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "pod-labeler.example.com"
webhooks:
- name: "pod-labeler.example.com"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    url: https://192.168.1.1:8000/mutate
    # service:
    #   namespace: "example-namespace"
    #   name: "example-service"
    # Replace caBundle of you own
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lVYmwyWkxIWGRKWGpL
[...]
      RklDQVRFLS0tLS0K
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
